Updated to target RDMP version 5 with new plugin layout and net5.0 targetting

--- a/Rdmp.Dicom.nuspec
+++ b/Rdmp.Dicom.nuspec
@@ -6,18 +6,15 @@
 		<authors>Health Informatics Service, University of Dundee</authors>
 		<description>Imaging plugin for Research Data Management Platform </description>
 		<dependencies>
-            <dependency id="HIC.RDMP.Plugin" version="4.2" />
+            <dependency id="HIC.RDMP.Plugin" version="5.0" />
 		</dependencies>
     </metadata>
   <files>
-    <file src="Plugin\net461\bin\$configuration$\net461\win-x64\publish\*"
-          exclude="**/net461.dll;**\BadMedicine.Core.dll;**\FAnsi.*;**\MapsDirectlyToDatabaseTable.dll;**\MySql.Data.dll;**\Oracle.ManagedDataAccess.dll;**\Rdmp.Core.dll;**\NPOI.*;**\Renci.*;**\MathNet.Numerics.dll*;**\Rdmp.UI.dll;**\ScintillaNET.dll;**\ReusableUIComponents.dll;**\ObjectListView.dll;**\WeifenLuo.WinFormsUI.Docking*"
-          target="lib\net461" />
-	<file src="Plugin\netcoreapp2.2\bin\$configuration$\netstandard2.0\win-x64\publish\*" 
+    <file src="Plugin\windows\bin\$configuration$\net5.0-windows\win-x64\publish\*"
+          exclude="**\BadMedicine.Core.dll;**\FAnsi.*;**\MapsDirectlyToDatabaseTable.dll;**\MySql.Data.dll;**\Oracle.ManagedDataAccess.dll;**\Rdmp.Core.dll;**\NPOI.*;**\Renci.*;**\MathNet.Numerics.dll*;**\Rdmp.UI.dll;**\ScintillaNET.dll;**\ReusableUIComponents.dll;**\ObjectListView.dll;**\WeifenLuo.WinFormsUI.Docking*"
+          target="lib\windows" />
+    <file src="Plugin\main\bin\$configuration$\net5.0\win-x64\publish\*" 
         exclude="**\Plugin.dll;**\BadMedicine.Core.dll;**\FAnsi.*;**\MapsDirectlyToDatabaseTable.dll;**\MySql.Data.dll;**\Oracle.ManagedDataAccess.dll;**\Rdmp.Core.dll;**\NPOI.*;**\Renci.*;**\MathNet.Numerics.dll*"  
-        target="lib\netcoreapp2.2\win\" />
-    <file src="Plugin\netcoreapp2.2\bin\$configuration$\netstandard2.0\linux-x64\publish\*" 
-          exclude="**\Plugin.dll;**\BadMedicine.Core.dll;**\FAnsi.*;**\MapsDirectlyToDatabaseTable.dll;**\MySql.Data.dll;**\Oracle.ManagedDataAccess.dll;**\Rdmp.Core.dll;**\NPOI.*;**\Renci.*;**\MathNet.Numerics.dll*"  
-          target="lib\netcoreapp2.2\linux\" />
+        target="lib\main\" />
   </files>
 </package>
