--- a/Rdmp.Dicom.UI/Rdmp.Dicom.UI.csproj
+++ b/Rdmp.Dicom.UI/Rdmp.Dicom.UI.csproj
@@ -2,8 +2,9 @@
   <PropertyGroup>
     <RootNamespace>Rdmp.Dicom.UI</RootNamespace>
     <AssemblyName>Rdmp.Dicom.UI</AssemblyName>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
@@ -16,27 +17,19 @@
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="CreateNewImagingDatasetUI.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="CreateNewImagingDatasetUI.cs" />
     <Compile Update="CreateNewImagingDatasetUI.Designer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="IsolationTableUI.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="IsolationTableUI.cs" />
     <Compile Update="IsolationTableUI.Designer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="TagColumnAdderUI.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="TagColumnAdderUI.cs" />
     <Compile Update="TagColumnAdderUI.Designer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="TagElevationXmlUI.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="TagElevationXmlUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
