--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -26,6 +26,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HIC.DicomTypeTranslation" Version="2.3.2" />
-    <PackageReference Include="HIC.RDMP.Plugin" Version="4.2.4" />
+    <PackageReference Include="HIC.RDMP.Plugin" Version="5.0.0-rc1" />
   </ItemGroup>
 </Project>
