--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -57,8 +57,8 @@ jobs:
           retention-days: 1
       - name: Upload release binaries
         if: contains(github.ref,'refs/tags/')
-        uses: alexellis/upload-assets@0.2.2
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+        uses: svenstaro/upload-release-action@v2
         with:
-          asset_paths: '["Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg"]'
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref }}
+          file: '["Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg"]'
