--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -59,4 +59,4 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
-          file: '["Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg"]'
+          file: '["HIC.Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg"]'
