Upload correct nupkg file to Github this time

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -58,4 +58,4 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
-          file: 'HIC.Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg'
+          file: 'Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg'
