--- a/Rdmp.Dicom.Library.nuspec
+++ b/Rdmp.Dicom.Library.nuspec
@@ -15,6 +15,7 @@
         <dependencies>
           <dependency id="HIC.DicomTypeTranslation" version="3.0.0" />
           <dependency id="HIC.RDMP.Plugin" version="7.0.4" />
+          <dependency id="SharpCompress" version="0.30.1" />
         </dependencies>
     </metadata>
   <files>
