--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -27,5 +27,6 @@
   <ItemGroup>
     <PackageReference Include="HIC.DicomTypeTranslation" Version="3.0.0" />
     <PackageReference Include="HIC.RDMP.Plugin" Version="7.0.4" />
+    <PackageReference Include="SharpCompress" Version="0.30.1" />
   </ItemGroup>
 </Project>
