--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -41,9 +41,12 @@ jobs:
           cd ../..
           nuget pack ./Rdmp.Dicom.nuspec -Properties Configuration=Release -IncludeReferencedProjects -Symbols -Version ${{ steps.version.outputs.version }}
           nuget pack ./Rdmp.Dicom.Library.nuspec -Properties Configuration=Release -IncludeReferencedProjects -Symbols -Version ${{ steps.version.outputs.version }}
-          cmd /c rdmpcli\rdmp.exe pack --file Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg  --CatalogueConnectionString "Server=localhost;Integrated Security=true;Encrypt=yes;Database=TEST_Catalogue;TrustServerCertificate=true" --dataexportconnectionstring "Server=localhost;Integrated Security=true;Encrypt=yes;Database=TEST_DataExport;TrustServerCertificate=true"
-          cmd /c rdmpcli\rdmp.exe cmd listsupportedcommands  --CatalogueConnectionString "Server=localhost;Integrated Security=true;Encrypt=yes;Database=TEST_Catalogue;TrustServerCertificate=true" --dataexportconnectionstring "Server=localhost;Integrated Security=true;Encrypt=yes;Database=TEST_DataExport;TrustServerCertificate=true"
-          cmd /c rdmpcli\rdmp.exe cmd describecommand CreateNewImagingDatasetSuite --CatalogueConnectionString "Server=localhost;Integrated Security=true;Encrypt=yes;Database=TEST_Catalogue;TrustServerCertificate=true" --dataexportconnectionstring "Server=localhost;Integrated Security=true;Encrypt=yes;Database=TEST_DataExport;TrustServerCertificate=true"
+          
+          cp Databases.Integration.yaml .\rdmpcli\Databases.yaml
+          cmd /c rdmpcli\rdmp.exe pack --file Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg
+          cmd /c rdmpcli\rdmp.exe cmd listsupportedcommands
+          cmd /c rdmpcli\rdmp.exe cmd describecommand CreateNewImagingDatasetSuite
+
       - name: Nuget push
         if: contains(github.ref,'refs/tags/')
         run: nuget push HIC.Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_KEY }} -SkipDuplicate
