--- a/Rdmp.Dicom.Library.nuspec
+++ b/Rdmp.Dicom.Library.nuspec
@@ -16,6 +16,7 @@
           <dependency id="HIC.DicomTypeTranslation" version="4.0.2" />
           <dependency id="HIC.RDMP.Plugin" version="8.0.7" />
           <dependency id="SharpCompress" version="0.32.2" />
+          <dependency id="LibArchive.Net" version="0.1.3" />
 		  <dependency id="Terminal.Gui" version="1.9.0" />
         </dependencies>
     </metadata>
