--- a/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
+++ b/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HIC.BadMedicine.Dicom" Version="0.0.15" />
-    <PackageReference Include="HIC.RDMP.Plugin.Test" Version="8.0.7" />
+    <PackageReference Include="HIC.RDMP.Plugin.Test" Version="8.1.0-rc1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
