--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <PackageReference Include="HIC.DicomTypeTranslation" Version="4.0.3" />
     <PackageReference Include="HIC.RDMP.Plugin" Version="8.1.0-rc1" />
+    <PackageReference Include="LibArchive.Net" Version="0.1.3" />
     <PackageReference Include="Terminal.Gui" Version="1.9.0" />
   </ItemGroup>
 </Project>
