--- a/Rdmp.Dicom.Library.nuspec
+++ b/Rdmp.Dicom.Library.nuspec
@@ -14,7 +14,7 @@
         <copyright>Copyright 2018-2019</copyright>
         <dependencies>
           <dependency id="HIC.DicomTypeTranslation" version="4.0.3" />
-          <dependency id="HIC.RDMP.Plugin" version="8.0.7" />
+          <dependency id="HIC.RDMP.Plugin" version="8.1.0-rc1" />
           <dependency id="LibArchive.Net" version="0.1.3" />
 		  <dependency id="Terminal.Gui" version="1.9.0" />
         </dependencies>
