--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: 'true'
+      - name: Update RDMP
+        run: git submodule update --remote
       - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
