--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -46,8 +46,7 @@ jobs:
           7z a -tzip Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg Rdmp.Dicom.nuspec p
           dotnet pack Rdmp.Dicom/Rdmp.Dicom.csproj -c Release -p:Version=${{ steps.version.outputs.version }} --include-source --include-symbols -o .
           
-          cp Databases.Integration.yaml RDMP\Tools\rdmp\Databases.yaml
-          dotnet run --project RDMP\\Tools\\rdmp\\rdmp.csproj -c Release -- -f <<-EOC
+          dotnet run --project RDMP\\Tools\\rdmp\\rdmp.csproj -c Release -- -f --dir yaml <<-EOC
           pack -p --file Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg
           cmd listsupportedcommands
           cmd describe CreateNewImagingDatasetSuite
