--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -25,6 +25,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          repository: HicServices/RDMP
+          ref: feature/rc4
+          path: RDMP
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
