--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -47,18 +47,19 @@ jobs:
           dotnet pack Rdmp.Dicom/Rdmp.Dicom.csproj -c Release -p:Version=${{ steps.version.outputs.version }} --include-source --include-symbols -o .
           
           cat > testcmd.yaml <<-EOC
-          pack -p --file Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg
-          cmd listsupportedcommands
-          cmd describe CreateNewImagingDatasetSuite
+          Commands:
+          - pack -p --file Rdmp.Dicom.${{ steps.version.outputs.version }}.nupkg
+          - cmd listsupportedcommands
+          - cmd describe CreateNewImagingDatasetSuite
 
-          cmd NewObject ConnectionStringKeyword MicrosoftSqlServer TrustServerCertificate yes
-          cmd NewObject ConnectionStringKeyword MicrosoftSqlServer Encrypt yes
-          cmd CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
-          cmd AddTag Catalogue:CT_ImageTable StudyDate null
-          cmd AddTag Catalogue:CT_*Table SeriesDate null
-          cmd AddTag Catalogue:CT_*Table SeriesDate null
-          cmd AddTag Catalogue:CT_*Table SeriesDate null          
-          cmd CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest2:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
+          - cmd NewObject ConnectionStringKeyword MicrosoftSqlServer TrustServerCertificate yes
+          - cmd NewObject ConnectionStringKeyword MicrosoftSqlServer Encrypt yes
+          - cmd CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
+          - cmd AddTag Catalogue:CT_ImageTable StudyDate null
+          - cmd AddTag Catalogue:CT_*Table SeriesDate null
+          - cmd AddTag Catalogue:CT_*Table SeriesDate null
+          - cmd AddTag Catalogue:CT_*Table SeriesDate null      -   
+          - cmd CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest2:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
           EOC
           dotnet run --project RDMP\\Tools\\rdmp\\rdmp.csproj -c Release -- --dir yaml -f testcmd.yaml
       - name: Nuget push
