--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -46,16 +46,16 @@ jobs:
           dotnet pack Rdmp.Dicom/Rdmp.Dicom.csproj -c Release -p:Version=${{ steps.version.outputs.version }} --include-source --include-symbols -o .
           cat > testcmd.yaml <<-EOC
           Commands:
-          - cmd listsupportedcommands
-          - cmd describe CreateNewImagingDatasetSuite
-          - cmd NewObject ConnectionStringKeyword MicrosoftSqlServer TrustServerCertificate yes
-          - cmd NewObject ConnectionStringKeyword MicrosoftSqlServer Encrypt yes
-          - cmd CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
-          - cmd AddTag Catalogue:CT_ImageTable StudyDate null
-          - cmd AddTag Catalogue:CT_*Table SeriesDate null
-          - cmd AddTag Catalogue:CT_*Table SeriesDate null
-          - cmd AddTag Catalogue:CT_*Table SeriesDate null      -   
-          - cmd CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest2:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
+          - listsupportedcommands
+          - describe CreateNewImagingDatasetSuite
+          - NewObject ConnectionStringKeyword MicrosoftSqlServer TrustServerCertificate yes
+          - NewObject ConnectionStringKeyword MicrosoftSqlServer Encrypt yes
+          - CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
+          - AddTag Catalogue:CT_ImageTable StudyDate null
+          - AddTag Catalogue:CT_*Table SeriesDate null
+          - AddTag Catalogue:CT_*Table SeriesDate null
+          - AddTag Catalogue:CT_*Table SeriesDate null      -   
+          - CreateNewImagingDatasetSuite "DatabaseType:MicrosoftSqlServer:Name:ImagingTest2:Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Encrypt=yes;TrustServerCertificate=true" ./data DicomFileCollectionSource CT_ ../CT.it false true
           EOC
       - name: Store created nupkg files
         uses: actions/upload-artifact@v3
